# taxi_online

./: .gitignore  ADMIN_PRICING_GUIDE.md  API_DOCS_UZ.md  API_DOKUMENTATSIYA_TOLIQ.md  BACKEND_STRUCTURE_README.md  DATABASE_FIX_SUMMARY.md  Dockerfile  FINAL_SUMMARY.md  Makefile  OTP_AUTH_GUIDE.md  README.md  RESTART_SERVER.md  SMS_INTEGRATION_SUMMARY.md  SWAGGER_AUTH_GUIDE.md  SWAGGER_TEST_INSTRUCTIONS.md  TESTING_GUIDE.md  TESTS_README.md  TWILIO_SETUP_GUIDE.md  alembic.ini  check_users.py  config.py  conftest.py  create_admin_direct.py  create_admin_user.py  create_dispatcher.py  create_test_user.py  database.py  debug_swagger_auth.py  debug_twilio.py  docker-compose.yml  extract_pptx_text.py  fix_database_columns.py  i18n.py  init_db.py  main.py  models.py  pyproject.toml  pytest.ini  rebuild_database.sh  requirements.txt  (+48 more)
crud/: __init__.py  user.py
instance/: royaltaxi.db  royaltaxi.db.backup
migrations/: env.py
migrations/versions/: 6dbbb219778f_add_customer_model_and_update_user_roles.py  add_otp_verification_table.py  bd5c5a96e218_add_current_location_to_users_table.py  f7c1afec4e58_add_hashed_password_column_to_users_.py  update_user_roles_and_add_customer.py  update_user_roles_simple.py
routers/: __init__.py  admin.py  auth.py  dispatcher.py  driver.py  files.py  rider.py  services.py  users.py
services/: map_service.py  sms_service.py
tests/: e2e_dispatcher_driver_flow.py  test_auth_flow.py
utils/: __init__.py  helpers.py  helpers.py.backup
